--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -8,6 +8,15 @@
 <body>
   <h1>Dynamic Quote Generator</h1>
 
+  <!-- Category Filter -->
+  <div>
+    <label for="categoryFilter">Filter by Category:</label>
+    <select id="categoryFilter" onchange="filterQuotes()">
+      <option value="all">All Categories</option>
+      <!-- Dynamically populated categories will be added here -->
+    </select>
+  </div>
+
   <!-- Display for the current quote -->
   <div id="quoteDisplay"></div>
   <button id="newQuote">Show New Quote</button>
